--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "final-project",
   "version": "0.1.0",
-  "homepage": "https://mammadovaslan.github.io/ecommerce",
+  "homepage": "https://mammadovaslan.github.io/E-commerce-project",
   "private": true,
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
