--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "final-project",
   "version": "0.1.0",
   "homepage": "https://mammadovaslan.github.io/E-commerce-project",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
     "@emotion/react": "^11.10.5",
@@ -24,7 +24,7 @@
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.191",
     "@types/node": "^16.18.10",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
@@ -40,7 +40,7 @@
     "react-phone-number-input": "^3.2.16",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.5.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-uuid": "^2.0.0",
