--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "final-project",
   "version": "0.1.0",
-  "homepage": "https://mammadovaslan.github.io/E-commerce-project",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
     "@emotion/react": "^11.10.5",
@@ -50,8 +49,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
